--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Mapbox Example - Coffee Shops with Popups</title>
+  <title>Coffee Days Locator</title>
   <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/v3.6.0/mapbox-gl.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&italic&display=swap">
 
+<link rel="icon" href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAIAAAD8GO2jAAAAYElEQVRIDQxbgHT9fw0WgCvsAwMDA8N9AwAAAAAAN3UDA8N7AgP8A2YLJkMrAzMDJkEtDjIINw1BDxFVGRgxFVYxGRYxFiqxWRgREBRfAgKGChYVFikNGCgOAogNDzUAQ0MYAAZAKgY7mHdjWgAAAABJRU5ErkJggg==" type="image/png" />
+  
   <style>
     @font-face {
       font-family: 'britney';
