--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&italic&display=swap">
 
-<link rel="icon" href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAIAAAD8GO2jAAAAYElEQVRIDQxbgHT9fw0WgCvsAwMDA8N9AwAAAAAAN3UDA8N7AgP8A2YLJkMrAzMDJkEtDjIINw1BDxFVGRgxFVYxGRYxFiqxWRgREBRfAgKGChYVFikNGCgOAogNDzUAQ0MYAAZAKgY7mHdjWgAAAABJRU5ErkJggg==" type="image/png" />
+<link rel="icon" type="image/png" href="favicon.png" /> 
   
   <style>
     @font-face {
