--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&italic&display=swap">
 
-<link rel="icon" type="image/png" href="favicon.png" /> 
+<link rel="icon" type="image/png" href="https://github.com/mx1000m/coffeedays/raw/752ddd8a6f284a3e77924d63a1805117c80c3b5c/favicon.png" /> 
   
   <style>
     @font-face {
