--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&italic&display=swap">
 
-<link rel="icon" type="image/png" href="https://github.com/mx1000m/coffeedays/raw/752ddd8a6f284a3e77924d63a1805117c80c3b5c/favicon.png" /> 
+<!-- Favicon with Blue Circle Emoji -->
+<link rel="icon" type="image/png" href="favicon.png" />
+
+
+
+</head>
   
   <style>
     @font-face {
@@ -36,8 +41,8 @@
     }
 
     .mapboxgl-popup {
-      z-index: 3000 !important; 
-      position: relative; 
+      z-index: 3000 !important; /* Ensure the popup container is above all elements */
+      position: relative; /* Respect the stacking context */
     }
 
     .mapboxgl-popup-content {
@@ -148,8 +153,8 @@ margin-bottom: 3px;
     }
     .ribbon-box .line4 {
       font-size: 11px;
-font-family: 'Roboto', sans-serif; 
-font-style: italic; 
+font-family: 'Roboto', sans-serif; /* Apply Roboto font */
+font-style: italic; /* Apply italic style */
     }
 
     .button-pill {
@@ -268,14 +273,14 @@ font-style: italic;
 
 .under-ribbon-text {
   position: absolute;
-  top: calc(10% + 35px); 
+  top: calc(10% + 35px); /* Adjust this value based on the height of your ribbon box and desired position */
   left: 50%;
   transform: translateX(-50%);
   color: white;
-  font-family: 'Roboto', sans-serif; 
-  font-size: 10px; 
+  font-family: 'Roboto', sans-serif; /* Use Roboto font */
+  font-size: 10px; /* Adjust font size as needed */
   text-align: center;
-  z-index: 2000; 
+  z-index: 2000; /* Ensure it appears above other elements */
 letter-spacing: 0px;
 
 }
@@ -284,14 +289,14 @@ letter-spacing: 0px;
 
 .footer-text {
   position: absolute;
-  bottom: 8px; 
+  bottom: 8px; /* Adjust as needed */
   left: 50%;
   transform: translateX(-50%);
   color: white;
-  font-family: 'Roboto', sans-serif; 
-  font-size: 10px; 
+  font-family: 'Roboto', sans-serif; /* Use Roboto font */
+  font-size: 10px; /* Adjust font size as needed */
   text-align: center;
-  z-index: 2000; 
+  z-index: 2000; /* Ensure it appears above other elements */
 letter-spacing: 1px;
 
 }
@@ -303,11 +308,13 @@ letter-spacing: 1px;
 <body>
   <div id="map"></div>
 
-  <div class="ribbon-box">
-    <div class="line1">ONCHAIN SUMMER</div>
-    <div class="line2">CoFfEE DaYS</div>
-    <div class="line3">COFFEE SHOP LOCATOR</div>
-  </div>
+  <a href="https://wallet.coinbase.com/ocs" target="_blank">
+    <div class="ribbon-box">
+      <div class="line1">ONCHAIN SUMMER</div>
+      <div class="line2">CoFfEE DaYS</div>
+      <div class="line3">COFFEE SHOP LOCATOR</div>
+    </div>
+  </a>
 
 
 <!-- New Text Element -->
@@ -338,7 +345,7 @@ letter-spacing: 1px;
 
 
 
-  
+  <!-- Vertical Zoom Slider -->
   <div class="zoom-slider">
     <button class="zoom-button zoom-in">+</button>
     <button class="zoom-button zoom-out">-</button>
@@ -481,17 +488,7 @@ letter-spacing: 1px;
             xHandle: '',
             image: 'https://github.com/mx1000m/coffeedays/raw/07c802ae85f4a6a898813ff641747110203486a0/piccolo.png'
         },
-        {
-            coordinates: [-122.4662, 37.7648],
-            name: 'POORBOY COFFEE',
-            address: '1235 9th Ave, San Francisco, CA 94122, USA',
-            hours: 'Mon-Tu: Closed<br>Wed-Sun: 8.00am - 3.00pm',
-            web: '',
-            webName: '',
-            x: '',
-            xHandle: '',
-            image: 'https://github.com/mx1000m/coffeedays/raw/07c802ae85f4a6a898813ff641747110203486a0/poorboy.png'
-        },
+
     ];
 
     const europeShopList = document.getElementById('europe-shop-list');
@@ -572,7 +569,7 @@ const offset = -5; // Latitude adjustment for pin offset
     map.flyTo({
       center: [
         location.coordinates[0],
-        location.coordinates[1] - -5 
+        location.coordinates[1] - -5 // This value represents the offset; adjust as needed
       ],
       zoom: 2.5,
       essential: true,
@@ -593,7 +590,7 @@ const offset = -5; // Latitude adjustment for pin offset
 
 
 
-    // Zoom functionality
+    // Zoom slider functionality
     document.querySelector('.zoom-in').addEventListener('click', () => {
       map.zoomIn();
     });
